--- a/index.html
+++ b/index.html
@@ -6,30 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Twitter Clone</title>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
 </head>
 <body>
-        <div id="container">
-            <div id="twitter-head"></div>
+    <div id="outer-container">
+        <div id="header-container">
+            <div class="name"></div>
             <div id="tweet-count"></div>
-            <div id="photo-container"></div> 
+        </div>
         
-            <div id="profile-details-container">
-                <div id="follow-button-container">
-                    <img id="profile-avatar" src="https://pbs.twimg.com/profile_images/1383184766959120385/MM9DHPWC_400x400.jpg"></img>
-                    <a class="follow" href="#header-container"><button id="follow-button">Follow</button></a>
-                </div>
-            </div>
-            <div id="namesplat"></div>
-            <div id="datesplat"></div>
+        <div id="photo-container">
+            <div id="background"></div>
+            <div id="photo"></div>
+        </div>
+    
+        <div id="profile-container">
+            <div class="name"></div>
+            <div class="domain"></div>
+            <div id="join-date"></div>
             <div id="follow-count"></div>
-            <div class="tabs-container">
-                <a href= "#tweets-container" class="tabs" id="Tweets"><h6 class="tab">Tweets</h6></a>
-                <a href = "#tweets-container" class="tabs" id="Tweets & Replies"><h6 class="tab">Tweets & Replies</h6></a>
-                <a href= "#tweets-container" class="tabs" id="Media"><h6 class="tab">Media</h6></a>
-                <a href = "#tweets-container" class="tabs"id="Likes"> <h6 class="tab">Likes</h6></a>
-            </div>
-            <div id="tweets"></div>
+        </div>
+
+        <div id="tabs-container">
+            <a href= "#tweets-container" class="tabs" id="Tweets">
+                <h6 class="tab">Tweets</h6>
+            </a>
+            <a href = "#tweets-container" class="tabs" id="Tweets & Replies">
+                <h6 class="tab">Tweets & Replies</h6>
+            </a>
+            <a href= "#tweets-container" class="tabs" id="Media">
+                <h6 class="tab">Media</h6>
+            </a>
+            <a href = "#tweets-container" class="tabs"id="Likes">
+                <h6 class="tab">Likes</h6>
+            </a>
+        </div>
+        <div id="tweets-container">
+
+        </div>
     </div>
-    <script src="index.js"></script>
 </body>
 </html>
