--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Twitter Clone</title>
     <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
 </head>
 <body>
     <div id="outer-container">
-        <div id="header-container">
-            <div class="name"></div>
-            <div id="tweet-count"></div>
-        </div>
+        <div id="header-container"></div>
         
         <div id="photo-container">
             <div id="background"></div>
@@ -45,5 +41,6 @@
 
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
