Simplify markup given dynamic div and class rendering

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <div id="outer-container">
         <div id="header-container"></div>
         
-        <div id="photo-container">
-            <div id="background"></div>
-            <div id="photo"></div>
-        </div>
+        <div id="photo-container"></div>
     
         <div id="profile-container">
             <div class="name"></div>
