--- a/index.html
+++ b/index.html
@@ -4,30 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Twitter Clone</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon"> 
     <link rel="stylesheet" href="style.css">
+    <title>Dynamic Twitter Clone</title>
 </head>
 <body>
     <div id="outer-container">
         <div id="header-container"></div>
         <div id="photo-container"></div>
         <div id="profile-container"></div>
-
-        <div id="tabs-container">
-            <a href= "#tweets-container" class="tabs" id="Tweets">
-                <h6 class="tab">Tweets</h6>
-            </a>
-            <a href = "#tweets-container" class="tabs" id="Tweets & Replies">
-                <h6 class="tab">Tweets & Replies</h6>
-            </a>
-            <a href= "#tweets-container" class="tabs" id="Media">
-                <h6 class="tab">Media</h6>
-            </a>
-            <a href = "#tweets-container" class="tabs"id="Likes">
-                <h6 class="tab">Likes</h6>
-            </a>
-        </div>
-        
+        <div id="tabs-container"></div>
         <div id="tweets-container"></div>
     </div>
     <script src="index.js"></script>
