Import new users data via mock JSON

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div id="tabs-container"></div>
         <div id="tweets-container"></div>
     </div>
+    <script src="users.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
