Add switch users container

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="profile-container"></div>
         <div id="tabs-container"></div>
         <div id="tweets-container"></div>
+        <div id="switch-user-container"></div>
     </div>
     <script src="users.js"></script>
     <script src="index.js"></script>
